added formatting and hooks to puzzle dir

--- a/IBM/February2024.ipynb
+++ b/IBM/February2024.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#first show histogram of possible outcomes for 1 game"
+    "# first show histogram of possible outcomes for 1 game"
    ]
   },
   {
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "import collections\n",
     "from termcolor import colored\n",
-    "from icecream import ic\n"
+    "from icecream import ic"
    ]
   },
   {
@@ -28,12 +28,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d4 = list(range(1,5))\n",
-    "d6 = list(range(1,7))\n",
-    "d8 = list(range(1,9))\n",
-    "d9 = list(range(1,10)) ##????? on IBM website it says this is 0-9 die? instead of 1-9?\n",
-    "d12 = list(range(1,13))\n",
-    "d20 = list(range(1,21))"
+    "d4 = list(range(1, 5))\n",
+    "d6 = list(range(1, 7))\n",
+    "d8 = list(range(1, 9))\n",
+    "d9 = list(\n",
+    "    range(1, 10)\n",
+    ")  ##????? on IBM website it says this is 0-9 die? instead of 1-9?\n",
+    "d12 = list(range(1, 13))\n",
+    "d20 = list(range(1, 21))"
    ]
   },
   {
@@ -64,17 +66,17 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
     "\n",
-    "ax.hist(sums, bins=30) \n",
-    "ax.set_xlabel(\"Sum\", labelpad=8) \n",
+    "ax.hist(sums, bins=30)\n",
+    "ax.set_xlabel(\"Sum\", labelpad=8)\n",
     "ax.set_ylabel(\"Frequency\")\n",
     "ax.set_title(\"Histogram of Sums Rolling 6 D&D Dice\")\n",
     "\n",
-    "ax.xaxis.set_ticks(np.arange(min(sums), max(sums)+1, 5))\n",
-    "ax.xaxis.set_major_formatter('{x:.0f}') \n",
+    "ax.xaxis.set_ticks(np.arange(min(sums), max(sums) + 1, 5))\n",
+    "ax.xaxis.set_major_formatter(\"{x:.0f}\")\n",
     "\n",
     "fig.tight_layout()\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -83,14 +85,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from sympy import isprime\n",
     "\n",
+    "\n",
     "def is_alice_win(n):\n",
-    "  return isprime(n)\n",
+    "    return isprime(n)\n",
+    "\n",
     "\n",
     "def is_bob_win(n):\n",
-    "  return not is_alice_win(n) and n % 2 == 0"
+    "    return not is_alice_win(n) and n % 2 == 0"
    ]
   },
   {
@@ -118,10 +121,9 @@
     }
    ],
    "source": [
-    "#get probability that alice and bob each win a game\n",
+    "# get probability that alice and bob each win a game\n",
     "total_outcomes = len(sums)\n",
     "alice_win_outcomes = bob_win_outcomes = 0\n",
-    "\n",
     "\n",
     "\n",
     "for k, v in collections.Counter(sums).items():\n",
@@ -214,12 +216,11 @@
     }
    ],
    "source": [
-    "\n",
     "# # driver code for basic MDP\n",
     "\n",
     "# # Transition probability matrix\n",
-    "# P = np.array([[0.25, 0.25, 0.5], \n",
-    "#                [0, 1, 0],  \n",
+    "# P = np.array([[0.25, 0.25, 0.5],\n",
+    "#                [0, 1, 0],\n",
     "#                [0, 0, 1]])\n",
     "# t,r = 1, 2\n",
     "\n",
@@ -233,49 +234,48 @@
     "# print(B[0,0], B[0,1])\n",
     "\n",
     "\n",
-    "\n",
     "# Number of wins to finish\n",
-    "N_STATES = 13  \n",
+    "N_STATES = 13\n",
     "\n",
-    "# Transition probability matrix \n",
-    "P = np.zeros((2*N_STATES+2, 2*N_STATES+2))\n",
-    "#alice loop\n",
+    "# Transition probability matrix\n",
+    "P = np.zeros((2 * N_STATES + 2, 2 * N_STATES + 2))\n",
+    "# alice loop\n",
     "for i in range(N_STATES):\n",
     "    P[i, 0] = draw_prob\n",
     "    P[i, N_STATES] = bob_win_prob\n",
     "\n",
-    "    if i == N_STATES-1:\n",
-    "        P[i, 2*N_STATES] = alice_win_prob\n",
+    "    if i == N_STATES - 1:\n",
+    "        P[i, 2 * N_STATES] = alice_win_prob\n",
     "        break\n",
     "\n",
-    "    P[i, i+1] = alice_win_prob\n",
+    "    P[i, i + 1] = alice_win_prob\n",
     "\n",
     "\n",
-    "for i in range(N_STATES, 2*N_STATES):\n",
+    "for i in range(N_STATES, 2 * N_STATES):\n",
     "    P[i, 0] = draw_prob\n",
     "    P[i, 1] = alice_win_prob\n",
-    "    \n",
-    "    if i == 2*N_STATES-1:\n",
-    "        P[i, 2*N_STATES+1] = bob_win_prob\n",
+    "\n",
+    "    if i == 2 * N_STATES - 1:\n",
+    "        P[i, 2 * N_STATES + 1] = bob_win_prob\n",
     "        break\n",
     "\n",
-    "    P[i, i+1] = bob_win_prob\n",
+    "    P[i, i + 1] = bob_win_prob\n",
     "\n",
-    "#add absorbing states\n",
-    "P[2*N_STATES, 2*N_STATES] = 1\n",
-    "P[2*N_STATES+1, 2*N_STATES+1] = 1\n",
+    "# add absorbing states\n",
+    "P[2 * N_STATES, 2 * N_STATES] = 1\n",
+    "P[2 * N_STATES + 1, 2 * N_STATES + 1] = 1\n",
     "\n",
-    "for i in range(P.shape[1]+1):\n",
-    "    print(f'{i:04}', end=' ')\n",
+    "for i in range(P.shape[1] + 1):\n",
+    "    print(f\"{i:04}\", end=\" \")\n",
     "print()\n",
     "\n",
     "for i, row in enumerate(P):\n",
-    "    print(f'{i+1:04}', end=' ')\n",
+    "    print(f\"{i+1:04}\", end=\" \")\n",
     "    for value in row:\n",
     "        if value == 0:\n",
-    "            print(f'{value:04}', end=' ')\n",
+    "            print(f\"{value:04}\", end=\" \")\n",
     "        else:\n",
-    "            print(colored(f'{value:04}', 'blue', 'on_yellow'), end=' ')\n",
+    "            print(colored(f\"{value:04}\", \"blue\", \"on_yellow\"), end=\" \")\n",
     "    print()"
    ]
   },
@@ -295,9 +295,9 @@
     }
    ],
    "source": [
-    "t,r = 2*N_STATES-1, 2\n",
+    "t, r = 2 * N_STATES - 1, 2\n",
     "Q = P[:t, :t]\n",
-    "R = P[:t, t:r+t]\n",
+    "R = P[:t, t : r + t]\n",
     "\n",
     "N = np.linalg.inv(np.eye(t) - Q)\n",
     "\n",
