--- a/Jane Street/February2024.ipynb
+++ b/Jane Street/February2024.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#to get intuition, first simulate"
+    "# to get intuition, first simulate"
    ]
   },
   {
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from tqdm import tqdm\n"
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -49,24 +49,29 @@
    "source": [
     "def simulate_circle_off_square(iterations=1_000_000_000, square_size=1):\n",
     "    off_square_count = 0\n",
-    "    \n",
+    "\n",
     "    for _ in tqdm(range(iterations), desc=\"Simulating\", unit=\"iteration\"):\n",
     "        # Generate two points (x1, y1) and (x2, y2) within the square\n",
     "        x1, y1, x2, y2 = np.random.uniform(0, square_size, 4)\n",
-    "        \n",
+    "\n",
     "        # Calculate the circle's radius\n",
-    "        radius = np.sqrt((x2 - x1)**2 + (y2 - y1)**2) / 2\n",
-    "        \n",
+    "        radius = np.sqrt((x2 - x1) ** 2 + (y2 - y1) ** 2) / 2\n",
+    "\n",
     "        # Calculate the circle's center\n",
     "        center_x = (x1 + x2) / 2\n",
     "        center_y = (y1 + y2) / 2\n",
-    "        \n",
+    "\n",
     "        # Check if any part of the circle is off the square\n",
-    "        if (center_x - radius < 0 or center_x + radius > square_size or\n",
-    "            center_y - radius < 0 or center_y + radius > square_size):\n",
+    "        if (\n",
+    "            center_x - radius < 0\n",
+    "            or center_x + radius > square_size\n",
+    "            or center_y - radius < 0\n",
+    "            or center_y + radius > square_size\n",
+    "        ):\n",
     "            off_square_count += 1\n",
-    "            \n",
+    "\n",
     "    return off_square_count / iterations\n",
+    "\n",
     "\n",
     "# Example simulation\n",
     "probability = simulate_circle_off_square()\n",
