--- a/Jane Street/January2024.ipynb
+++ b/Jane Street/January2024.ipynb
@@ -11,7 +11,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cvxpy as cp\n"
+    "import cvxpy as cp"
    ]
   },
   {
@@ -20,7 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Define problem dimensions\n",
     "num_pentominos = 12  # Adjust if needed\n",
     "grid_rows = 6  # Adjust grid dimensions as needed\n",
@@ -28,17 +27,25 @@
     "\n",
     "# Define decision variables\n",
     "x = cp.Variable(num_pentominos, boolean=True)  # Placement of pentominos\n",
-    "y = cp.Variable((grid_rows, grid_cols), boolean=True)  # Adjacency to pentominos\n",
+    "y = cp.Variable(\n",
+    "    (grid_rows, grid_cols), boolean=True\n",
+    ")  # Adjacency to pentominos\n",
     "\n",
     "# Constraint (1): Each cell can be in at most one pentomino or adjacent to at most one.\n",
     "constraints = []\n",
     "for i in range(grid_rows):\n",
     "    for j in range(grid_cols):\n",
-    "        constraints.append(sum(x[p] for p in pentominos_containing_cell(i, j)) + sum(x[p] for p in pentominos_adjacent_to_cell(i, j)) <= 1)\n",
+    "        constraints.append(\n",
+    "            sum(x[p] for p in pentominos_containing_cell(i, j))\n",
+    "            + sum(x[p] for p in pentominos_adjacent_to_cell(i, j))\n",
+    "            <= 1\n",
+    "        )\n",
     "\n",
     "# Constraint (2): If a pentomino is placed, at least one adjacent cell must also be adjacent to another pentomino.\n",
     "for p in range(num_pentominos):\n",
-    "    constraints.append(cp.sum(y[i, j] for i, j in adjacent_cells_of_pentomino(p)) >= x[p])\n",
+    "    constraints.append(\n",
+    "        cp.sum(y[i, j] for i, j in adjacent_cells_of_pentomino(p)) >= x[p]\n",
+    "    )\n",
     "\n",
     "# Objective: Maximize the number of cells containing pentominos\n",
     "objective = cp.Maximize(cp.sum(x))\n",
@@ -59,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#did it by hand"
+    "# did it by hand"
    ]
   }
  ],
