--- a/Jane Street/March2024.ipynb
+++ b/Jane Street/March2024.ipynb
@@ -18,16 +18,16 @@
    "outputs": [],
    "source": [
     "sum_grid = [\n",
-    "    [-1,18,-1,-1,-1,-1,7,-1,-1],\n",
-    "    [-1,-1,-1,-1,12,-1,-1,-1,-1],\n",
-    "    [-1,-1,9,-1,-1,-1,-1,31,-1],\n",
-    "    [-1,-1,-1,-1,-1,-1,-1,-1,-1],\n",
-    "    [-1,5,-1,11,-1,22,-1,22,-1],\n",
-    "    [-1,-1,-1,-1,-1,-1,-1,-1,-1],\n",
-    "    [-1,9,-1,-1,-1,-1,19,-1,-1],\n",
-    "    [-1,-1,-1,-1,14,-1,-1,-1,-1],\n",
-    "    [-1,-1,-1,-1,-1,-1,-1,-1,-1],\n",
-    "    [-1,-1,22,-1,-1,-1,-1,15,-1]\n",
+    "    [-1, 18, -1, -1, -1, -1, 7, -1, -1],\n",
+    "    [-1, -1, -1, -1, 12, -1, -1, -1, -1],\n",
+    "    [-1, -1, 9, -1, -1, -1, -1, 31, -1],\n",
+    "    [-1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
+    "    [-1, 5, -1, 11, -1, 22, -1, 22, -1],\n",
+    "    [-1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
+    "    [-1, 9, -1, -1, -1, -1, 19, -1, -1],\n",
+    "    [-1, -1, -1, -1, 14, -1, -1, -1, -1],\n",
+    "    [-1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
+    "    [-1, -1, 22, -1, -1, -1, -1, 15, -1],\n",
     "]\n",
     "\n",
     "# sum_grid = [\n",
@@ -38,9 +38,14 @@
     "#     [10,-1,-1,-1,-1]\n",
     "# ]\n",
     "\n",
-    "placed_grid = [[False for _ in range(len(sum_grid))] for _ in range(len(sum_grid))]\n",
+    "placed_grid = [\n",
+    "    [False for _ in range(len(sum_grid))] for _ in range(len(sum_grid))\n",
+    "]\n",
     "\n",
-    "number_grid = [[-1 for _ in range(len(sum_grid))] for _ in range(len(sum_grid))]\n",
+    "number_grid = [\n",
+    "    [-1 for _ in range(len(sum_grid))] for _ in range(len(sum_grid))\n",
+    "]\n",
+    "\n",
     "\n",
     "def print_2d_array_nicely(arr):\n",
     "    print(pd.DataFrame(arr))\n",
@@ -48,33 +53,34 @@
     "\n",
     "def get_corners(hooks_grid):\n",
     "    corners = []\n",
-    "    \n",
+    "\n",
     "    # Find bounds of 0 region\n",
     "    x_min = len(hooks_grid)\n",
     "    x_max = 0\n",
-    "    y_min = len(hooks_grid[0]) \n",
+    "    y_min = len(hooks_grid[0])\n",
     "    y_max = 0\n",
-    "    \n",
+    "\n",
     "    for i in range(len(hooks_grid)):\n",
     "        for j in range(len(hooks_grid[0])):\n",
     "            if hooks_grid[i][j] == 0:\n",
     "                x_min = min(x_min, i)\n",
-    "                y_min = min(y_min, j)  \n",
+    "                y_min = min(y_min, j)\n",
     "                x_max = max(x_max, i)\n",
     "                y_max = max(y_max, j)\n",
-    "                \n",
-    "    # Append corners        \n",
+    "\n",
+    "    # Append corners\n",
     "    corners.append((x_min, y_min))\n",
     "    corners.append((x_max, y_min))\n",
     "    corners.append((x_min, y_max))\n",
     "    corners.append((x_max, y_max))\n",
-    "    \n",
+    "\n",
     "    return corners\n",
+    "\n",
     "\n",
     "def place_hook(hooks_grid, hook_size, x, y):\n",
     "    above = [hooks_grid[i][y] for i in range(x)]\n",
     "    below = [hooks_grid[i][y] for i in range(x + 1, len(hooks_grid))]\n",
-    "    right = hooks_grid[x][y + 1:]\n",
+    "    right = hooks_grid[x][y + 1 :]\n",
     "    left = hooks_grid[x][:y]\n",
     "\n",
     "    if all(element == 0 for element in above):\n",
@@ -93,7 +99,7 @@
     "        for j in range(y):\n",
     "            hooks_grid[x][j] = hook_size\n",
     "    hooks_grid[x][y] = hook_size\n",
-    "    \n",
+    "\n",
     "    return hooks_grid\n",
     "\n",
     "\n",
@@ -101,16 +107,19 @@
     "    if current_hook_size == 0:\n",
     "        yield hooks_grid\n",
     "        return\n",
-    "    \n",
+    "\n",
     "    corners = get_corners(hooks_grid)\n",
-    "    \n",
+    "\n",
     "    for corner in corners:\n",
     "        # Make a copy of the grid to try placing the current hook\n",
     "        new_grid = [row[:] for row in hooks_grid]\n",
     "        new_grid = place_hook(new_grid, current_hook_size, *corner)\n",
     "        yield from generate_hooks_grids(new_grid, current_hook_size - 1)\n",
     "\n",
-    "initial_hooks_grid = [[0 for _ in range(len(sum_grid))] for _ in range(len(sum_grid))]\n",
+    "\n",
+    "initial_hooks_grid = [\n",
+    "    [0 for _ in range(len(sum_grid))] for _ in range(len(sum_grid))\n",
+    "]\n",
     "\n",
     "for possible_hooks_grid in generate_hooks_grids(initial_hooks_grid):\n",
     "    print(possible_hooks_grid)\n",
@@ -123,30 +132,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "\"\"\"\n",
     "now, place numbers per the hooks_grid and check if good\n",
     "\"\"\"\n",
     "\n",
     "\n",
     "def is_cell_bad(number_grid, sum_grid, placed_grid, cell):\n",
-    "    x,y = cell\n",
+    "    x, y = cell\n",
     "    rows, cols = len(sum_grid), len(sum_grid[0])\n",
+    "\n",
     "    def is_valid(r, c):\n",
     "        return 0 <= r < rows and 0 <= c < cols and number_grid[r][c] != 0\n",
     "\n",
-    "    #check for sum grid \n",
+    "    # check for sum grid\n",
     "    if sum_grid[x][y] != -1:\n",
     "        total, didnt_break = 0, True\n",
     "        for dx, dy in [(0, 1), (1, 0), (0, -1), (-1, 0)]:\n",
-    "            if is_valid(x+dx,y+dy):\n",
-    "                if not placed_grid[x+dx][y+dy]: \n",
+    "            if is_valid(x + dx, y + dy):\n",
+    "                if not placed_grid[x + dx][y + dy]:\n",
     "                    didnt_break = False\n",
     "                    break\n",
-    "                total += number_grid[x+dx][y+dy]\n",
-    "        if didnt_break and total != sum_grid[x][y]: \n",
+    "                total += number_grid[x + dx][y + dy]\n",
+    "        if didnt_break and total != sum_grid[x][y]:\n",
     "            return True\n",
-    "        \n",
     "\n",
     "    squares = []\n",
     "\n",
@@ -154,52 +162,73 @@
     "    for i in range(max(0, x - 1), min(rows - 1, x)):\n",
     "        for j in range(max(0, y - 1), min(cols - 1, y)):\n",
     "            # Check if all elements in the square exist within the matrix bounds\n",
-    "            if (i + 1 < rows and j + 1 < cols):\n",
-    "                squares.append([[i, j], [i, j + 1], [i + 1, j], [i + 1, j + 1]])\n",
-    "    \n",
+    "            if i + 1 < rows and j + 1 < cols:\n",
+    "                squares.append(\n",
+    "                    [[i, j], [i, j + 1], [i + 1, j], [i + 1, j + 1]]\n",
+    "                )\n",
+    "\n",
     "    def bad_square_found(square):\n",
-    "        return all(placed_grid[i][j] for i, j in square) and list(map(lambda x: number_grid[x[0]][x[1]], square)).count(-1) == 0\n",
+    "        return (\n",
+    "            all(placed_grid[i][j] for i, j in square)\n",
+    "            and list(map(lambda x: number_grid[x[0]][x[1]], square)).count(-1)\n",
+    "            == 0\n",
+    "        )\n",
     "\n",
     "    if any(bad_square_found(square) for square in squares):\n",
     "        return True\n",
     "    return False\n",
-    "    \n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "def place_numbers(number_grid, hooks_grid, sum_grid, placed_grid, current_number=9, available_hooks=set(range(1, 10))):\n",
+    "def place_numbers(\n",
+    "    number_grid,\n",
+    "    hooks_grid,\n",
+    "    sum_grid,\n",
+    "    placed_grid,\n",
+    "    current_number=9,\n",
+    "    available_hooks=set(range(1, 10)),\n",
+    "):\n",
     "    if current_number == 0:\n",
     "        # Base case: all numbers placed, yield the current grid\n",
     "        yield number_grid\n",
     "        return\n",
     "\n",
     "    for hook_value in sorted(available_hooks, reverse=True):\n",
-    "        hook_cells = [(i, j) for i in range(len(hooks_grid)) for j in range(len(hooks_grid[0])) if hooks_grid[i][j] == hook_value]\n",
-    "        \n",
+    "        hook_cells = [\n",
+    "            (i, j)\n",
+    "            for i in range(len(hooks_grid))\n",
+    "            for j in range(len(hooks_grid[0]))\n",
+    "            if hooks_grid[i][j] == hook_value\n",
+    "        ]\n",
+    "\n",
     "        if len(hook_cells) >= current_number:\n",
     "            for placement in combinations(hook_cells, current_number):\n",
-    "                #prune with 2x2 requirement and starting value requirement\n",
+    "                # prune with 2x2 requirement and starting value requirement\n",
     "\n",
     "                trial_number_grid = [row[:] for row in number_grid]\n",
     "                trial_placed_grid = [row[:] for row in placed_grid]\n",
     "                for cell in placement:\n",
-    "                    x,y = cell\n",
+    "                    x, y = cell\n",
     "                    trial_number_grid[x][y] = current_number\n",
     "                    trial_placed_grid[x][y] = True\n",
-    "                \n",
+    "\n",
     "                should_continue = False\n",
     "                for cell in placement:\n",
     "                    if is_cell_bad(number_grid, sum_grid, placed_grid, cell):\n",
     "                        should_continue = True\n",
     "                if should_continue:\n",
     "                    continue\n",
-    "                    \n",
     "\n",
     "                new_available_hooks = available_hooks.copy()\n",
     "                new_available_hooks.remove(hook_value)\n",
     "\n",
-    "                yield from place_numbers(trial_number_grid, hooks_grid, sum_grid, trial_placed_grid, current_number - 1, new_available_hooks)\n",
+    "                yield from place_numbers(\n",
+    "                    trial_number_grid,\n",
+    "                    hooks_grid,\n",
+    "                    sum_grid,\n",
+    "                    trial_placed_grid,\n",
+    "                    current_number - 1,\n",
+    "                    new_available_hooks,\n",
+    "                )\n",
     "\n",
     "\n",
     "def validate_number_grid(number_grid, sum_grid):\n",
@@ -214,21 +243,23 @@
     "                    total += number_grid[r + dr][c + dc]\n",
     "                if total != sum_grid[r][c]:\n",
     "                    return False\n",
-    "    \n",
-    "    #empty cell check\n",
+    "\n",
+    "    # empty cell check\n",
     "    for r in range(rows - 1):\n",
     "        for c in range(cols - 1):\n",
     "            # Check the 2x2 square\n",
-    "            if all(number_grid[r][c] != -1 or\n",
-    "                   number_grid[r + 1][c] != -1 or\n",
-    "                   number_grid[r][c + 1] != -1 or\n",
-    "                   number_grid[r + 1][c + 1] != -1):\n",
+    "            if all(\n",
+    "                number_grid[r][c] != -1\n",
+    "                or number_grid[r + 1][c] != -1\n",
+    "                or number_grid[r][c + 1] != -1\n",
+    "                or number_grid[r + 1][c + 1] != -1\n",
+    "            ):\n",
     "                return False\n",
     "\n",
-    "\n",
-    "    #check for single island\n",
+    "    # check for single island\n",
     "    visited = [[False for _ in range(cols)] for _ in range(rows)]\n",
     "    islands = 0\n",
+    "\n",
     "    def is_valid(r, c):\n",
     "        return 0 <= r < rows and 0 <= c < cols and number_grid[r][c] != 0\n",
     "\n",
@@ -245,11 +276,9 @@
     "        for c in range(cols):\n",
     "            if number_grid[r][c] != -1:\n",
     "                islands += 1\n",
-    "                dfs(r,c)\n",
+    "                dfs(r, c)\n",
     "\n",
-    "    return islands == 1\n",
-    "                \n",
-    "\n"
+    "    return islands == 1"
    ]
   },
   {
@@ -280,14 +309,21 @@
    ],
    "source": [
     "for possible_hooks_grid in generate_hooks_grids(initial_hooks_grid):\n",
-    "    for possible_filled_number_grid in place_numbers(number_grid, possible_hooks_grid, sum_grid, placed_grid):\n",
+    "    for possible_filled_number_grid in place_numbers(\n",
+    "        number_grid, possible_hooks_grid, sum_grid, placed_grid\n",
+    "    ):\n",
     "        if validate_number_grid(possible_filled_number_grid, sum_grid):\n",
-    "                with open(os.path.join(os.getcwd(), \"output.txt\"), \"a\") as f:\n",
-    "                     f.write(pd.DataFrame(possible_hooks_grid).to_string(index=False))\n",
-    "                     f.write(\"\\n\\n\")\n",
-    "                     f.write(pd.DataFrame(possible_filled_number_grid).to_string(index=False))\n",
-    "                     f.write(\"\\n\\n\\n\")\n",
-    "\n"
+    "            with open(os.path.join(os.getcwd(), \"output.txt\"), \"a\") as f:\n",
+    "                f.write(\n",
+    "                    pd.DataFrame(possible_hooks_grid).to_string(index=False)\n",
+    "                )\n",
+    "                f.write(\"\\n\\n\")\n",
+    "                f.write(\n",
+    "                    pd.DataFrame(possible_filled_number_grid).to_string(\n",
+    "                        index=False\n",
+    "                    )\n",
+    "                )\n",
+    "                f.write(\"\\n\\n\\n\")"
    ]
   }
  ],
