--- a/IBM/March2024.ipynb
+++ b/IBM/March2024.ipynb
@@ -29,17 +29,19 @@
     "\n",
     "def get_sequence(a, n):\n",
     "    a0 = a\n",
-    "    if isprime(a): return False\n",
+    "    if isprime(a):\n",
+    "        return False\n",
     "    for i in range(1, n):\n",
     "        a += i\n",
     "        if isprime(a):\n",
     "            return False\n",
     "    return a0\n",
     "\n",
+    "\n",
     "def find_x_n(n):\n",
     "    found_seq = False\n",
     "    # for a0 in tqdm(range(30_430_000_000, 100_000_000_000)):\n",
-    "    for a0 in tqdm(range(15_000_000_000+906344696, 100_000_000_000)): \n",
+    "    for a0 in tqdm(range(15_000_000_000 + 906344696, 100_000_000_000)):\n",
     "        sequence = get_sequence(a0, n)\n",
     "        if sequence is not False:\n",
     "            with open(\"output.txt\", \"a\") as f:\n",
@@ -48,7 +50,7 @@
     "            print(f\"{n} {sequence}\\n\")\n",
     "            break\n",
     "    if not found_seq:\n",
-    "        print(\"no sequence found\")\n"
+    "        print(\"no sequence found\")"
    ]
   },
   {
@@ -67,7 +69,6 @@
    "source": [
     "# for i in range(1,6):\n",
     "#     find_x_n(i)\n",
-    "\n",
     "# find_x_n(1000)\n",
     "find_x_n(2024)"
    ]
@@ -155,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.1.0"
   }
  },
  "nbformat": 4,
